DRT-4871 Fix width of radio button wrapping div

--- a/server/src/main/assets/stylesheets/main.less
+++ b/server/src/main/assets/stylesheets/main.less
@@ -666,7 +666,7 @@ rect.bordered {
   margin-bottom: 10px;
   padding: 10px 5px 5px 10px;
   background-color: #eee;
-  width: 230px;
+  width: auto;
 }
 
 .active-control {
